--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   },
-  "root": true
+  "root": true,
+  "dependencies": {
+    "node-emoji": "^1.11.0"
+  }
 }
