fix: release v3.1.1 to fix the readme somehow being excluded from npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptocipher",
   "description": "Simplified Node.js Encryption, Hashing, and Hmac. Featuring security & policy by design to ensure strong standards for development of your services.",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "license": "MIT",
   "author": "Samuel Voeller <samuel.voeller@amethyst.live> (https://invite-to.amethyst.live)",
   "contributors": [],
@@ -23,6 +23,7 @@
     "LICENSE",
     "package-lock.json",
     "package.json",
+    "README.md",
     "tsconfig.json"
   ],
   "scripts": {
