--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "launch",
     "detect-dist": "node -e \"const dist = require('fs').existsSync('dist'); console.info('Distribution:', (dist ? 'Available. Using distribution.' : 'Not available. Building from source.')); if (dist) process.exit(0); process.exit(1);\"",
-    "prepare": "husky install && npm run detect-dist || npm exec --package=typescript -c 'tsc --project ./tsconfig.json'"
+    "prepare": "husky install && npm run detect-dist || npm exec --package=typescript -c 'tsc --project ./dist.tsconfig.json'"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
